Added CV Button to front page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
               <span class="button-text">Check out my thesis project!</span> 
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
+            <a class="button" id="my-work-link" href="cv.html">
+              <span class="button-text">Check out my CV</span> 
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
 
             <div id="portfolio-header-social-container">
               <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/alexandernitzschke">
