--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
         </div>
 
         <div class="skill">
-          <div class="skill-name">Simulink</div>
+          <div class="skill-name">Data Analysis</div>
           <div class="skill-bar">
-            <div class="skill-per" per="70%" style="max-width: 70%"></div>
+            <div class="skill-per" per="90%" style="max-width: 90%"></div>
           </div>
         </div>
 
         <div class="skill">
-          <div class="skill-name">C</div>
+          <div class="skill-name">Simulink</div>
           <div class="skill-bar">
             <div class="skill-per" per="70%" style="max-width: 70%"></div>
           </div>
@@ -159,35 +159,35 @@
 
         <div class="skills">
           <div class="skill">
-              <div class="skill-name">German</div>
+              <div class="skill-name">German (Native)</div>
               <div class="skill-bar">
                 <div class="skill-per" per="100%" style="max-width: 100%"></div>
               </div>
           </div>
 
         <div class="skill">
-          <div class="skill-name">English</div>
+          <div class="skill-name">English (C1)</div>
           <div class="skill-bar">
             <div class="skill-per" per="100%" style="max-width: 100%"></div>
           </div>
         </div>
 
         <div class="skill">
-          <div class="skill-name">Spanish</div>
+          <div class="skill-name">Spanish (B1+)</div>
           <div class="skill-bar">
             <div class="skill-per" per="55%" style="max-width: 55%"></div>
           </div>
         </div>
 
         <div class="skill">
-          <div class="skill-name">French</div>
+          <div class="skill-name">French (A2)</div>
           <div class="skill-bar">
             <div class="skill-per" per="20%" style="max-width: 20%"></div>
           </div>
         </div>
 
         <div class="skill">
-          <div class="skill-name">Mandarin Chinese</div>
+          <div class="skill-name">Mandarin Chinese (Beginner)</div>
           <div class="skill-bar">
             <div class="skill-per" per="10%" style="max-width: 10%"></div>
           </div>
